--- a/schedule.html
+++ b/schedule.html
@@ -64,12 +64,12 @@
             </div>
         </div>
         <div class="regis">
-            <h3 class="lets_btn ">REGISTER NOW</h3>
-            <ol>
+            <a class="lets_btn " href="regis.html">REGISTER NOW</a><br>
+           <!-- <ol>
                 <li>Day 2: <a href="https://forms.gle/L4anZa7aGD1tXVk28">Chatbot Exhibition </a> </li>
                 <li>Day 3: </li>
                 <li>Day 4: </li>
-             
+             -->
             </ol>
         </div>
     </div>
