--- a/regis.html
+++ b/regis.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI WEEK Schedule</title>
     <link rel="stylesheet" href="style2.css"> 
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
     <div class="hero">
@@ -15,7 +15,7 @@
         </nav>
         
     <div class="regis">
-       <p><b>Note:click on the links for registration</b></p>
+       <p><b><br><br>Note:click on the links for registration</b></p>
         <table>
             <tr>
                 <th>Day</th>
@@ -23,17 +23,22 @@
             </tr>
             <tr>
                 <td><b>Day 2</b></td>
-               <td><a href="https://forms.gle/L4anZa7aGD1tXVk28">Chatbot Exhibition </a></td>
+               <td><a href="https://docs.google.com/forms/d/e/1FAIpQLSf7pym1Mtz-2sZ-rqYSCyA63YUaDlEEgffsSX_emYddmXIHEA/viewform?usp=sharing" target="_blank">Chatbot Exhibition </a></td>
             </tr>
             <tr>
                 <td><b>Day 3</b></td>
-                <td></td>
+                <td><a href="https://forms.gle/cBYmuNkgNHBUBNPn6" target="_blank">AI Art and Creativity Contest </a></td>
             </tr>
             <tr>
                 <td><b>Day 4</b></td>
-                <td></td>
+                <td><a href="https://forms.gle/wKvkz2k1uquKD6n4A" target="_blank">AI Tool Exhibition</a></td>
             </tr>
         </table>
+
+        <div class="regis">
+            <a class="lets_btn " href="https://chat.whatsapp.com/IDuT7waNGTV419f1pubBnX" target="_blank">Join Whatsapp Group</a><br>
+
+        </div>
     </div>
 </div>
 </body>
