Added Register Button

--- a/schedule.html
+++ b/schedule.html
@@ -49,6 +49,10 @@
                     <td>Felicitation of Winners & Closing Ceremony (Quiz, Debate, Art, Chatbot Design)</td>
                 </tr>
             </table>
+
+            <div class="regis">
+            <a class="lets_btn " href="regis.html">REGISTER NOW</a><br>
+            </div>
             <br>
             <br>
             <div class="WeekDetails">
