--- a/schedule.html
+++ b/schedule.html
@@ -17,7 +17,7 @@
 
         <!-- Main Content -->
         <div class="container">
-            <h1><br><br> WEEK Schedule</h1>
+            <h1>Week Schedule</h1>
 
             <table>
                 <tr>
@@ -30,7 +30,7 @@
                 </tr>
                 <tr>
                     <td><b>Day 2</b></td>
-                    <td>AI Quiz & Trivia, Mini AI Labs: Build Your First Chatbot, Chatbot Exhibition</td>
+                    <td>AI Quiz & Trivia, Mini AI Labs:Build Your First Chatbot, Chatbot Exhibition</td>
                 </tr>
                 <tr>
                     <td><b>Day 3</b></td>
@@ -53,6 +53,20 @@
             <br>
             <br>
             <div class="WeekDetails">
+                <style>
+                    dl {
+                      display: flex;
+                      flex-direction: column;
+                    }
+                    dt {
+                      font-weight: bold;
+                    }
+                    dd {
+                      margin-left: 1em; /* Adjust this to control spacing */
+                      text-indent: -1em; /* Aligns text closer to bullet */
+                      padding-left: 1em; /* Pushes text back for proper alignment */
+                    }
+                  </style>
                 <dl>
                     <dd><h3 align="left">Day 1 : Kick Off - </h3></dd>
                     <ul>
