--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <div class="hero">
         <!-- Navbar -->
         <nav>
-            <img src="Coding_Ninjas_Logo_Cropped.png" class="logo">
-            <span class="club-name">10X Club</span>
+            <img src="new_10x_logo.png" class="logo">
         </nav>
         
         <!-- Main Content -->
