--- a/regis.html
+++ b/regis.html
@@ -9,9 +9,8 @@
 <body>
     <div class="hero">
         <!-- Navbar -->
-        <nav>
-            <img src="Coding_Ninjas_Logo_Cropped.png" class="logo">
-            <span class="club-name">10X Club</span>
+      <nav>
+            <img src="new_10x_logo.png" class="logo">
         </nav>
         
     <div class="regis">
