--- a/schedule.html
+++ b/schedule.html
@@ -11,13 +11,12 @@
     <div class="hero">
         <!-- Navbar -->
         <nav>
-            <img src="Coding_Ninjas_Logo_Cropped.png" class="logo">
-            <span class="club-name">10X Club</span>
+            <img src="new_10x_logo.png" class="logo">
         </nav>
 
         <!-- Main Content -->
         <div class="container">
-            <h1>Week Schedule</h1>
+            <h1><br><br>Week Schedule</h1>
 
             <table>
                 <tr>
