--- a/regis.html
+++ b/regis.html
@@ -14,7 +14,7 @@
         </nav>
         
     <div class="regis">
-       <p><b><br><br>Note:click on the links for registration</b></p>
+       <p><b><br><br><br>Note:click on the links for registration</b></p>
         <table>
             <tr>
                 <th>Day</th>
