--- a/regis.html
+++ b/regis.html
@@ -14,7 +14,7 @@
         </nav>
         
     <div class="regis">
-       <p><b><br><br><br>Note:click on the links for registration</b></p>
+      <h5><b>Note: Click on the links for registration</b></h5>
         <table>
             <tr>
                 <th>Day</th>
@@ -34,7 +34,7 @@
             </tr>
         </table>
 
-        <div class="regis">
+            <h5><b>Note: FOR REMAINING EVENTS THERE'S ON THE SPOT ENTRY</b></h5>
             <a class="lets_btn " href="https://chat.whatsapp.com/IDuT7waNGTV419f1pubBnX" target="_blank">Join Whatsapp Group</a><br>
 
         </div>
