--- a/regis.html
+++ b/regis.html
@@ -14,7 +14,7 @@
         </nav>
         
     <div class="regis">
-      <h5><b>Note: Click on the links for registration</b></h5>
+        <h5><b>Note: Click on the link for registration</b></h5>
         <table>
             <tr>
                 <th>Day</th>
@@ -34,7 +34,8 @@
             </tr>
         </table>
 
-            <h5><b>Note: FOR REMAINING EVENTS THERE'S ON THE SPOT ENTRY</b></h5>
+        <h5><b>Note: FOR REMAINING EVENTS THERE IS ON THE SPOT ENTRY</b></h5>
+        <div class="regis">
             <a class="lets_btn " href="https://chat.whatsapp.com/IDuT7waNGTV419f1pubBnX" target="_blank">Join Whatsapp Group</a><br>
 
         </div>
