--- a/regis.html
+++ b/regis.html
@@ -33,8 +33,7 @@
                 <td><a href="https://forms.gle/wKvkz2k1uquKD6n4A" target="_blank">AI Tool Exhibition</a></td>
             </tr>
         </table>
-
-        <h5><b>Note: FOR REMAINING EVENTS THERE IS ON THE SPOT ENTRY</b></h5>
+        <h5 style="padding: 3%;"><b>Note: FOR REMAINING EVENTS THERE IS ON THE SPOT ENTRY</b></h5>
         <div class="regis">
             <a class="lets_btn " href="https://chat.whatsapp.com/IDuT7waNGTV419f1pubBnX" target="_blank">Join Whatsapp Group</a><br>
 
