--- a/regis.html
+++ b/regis.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI WEEK Schedule</title>
+    <title>AI Week Schedule</title>
     <link rel="stylesheet" href="style2.css"> 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -33,6 +33,7 @@
                 <td><a href="https://forms.gle/wKvkz2k1uquKD6n4A" target="_blank">AI Tool Exhibition</a></td>
             </tr>
         </table>
+
         <h5 style="padding: 3%;"><b>Note: FOR REMAINING EVENTS THERE IS ON THE SPOT ENTRY</b></h5>
         <div class="regis">
             <a class="lets_btn " href="https://chat.whatsapp.com/IDuT7waNGTV419f1pubBnX" target="_blank">Join Whatsapp Group</a><br>
