--- a/regis.html
+++ b/regis.html
@@ -14,7 +14,7 @@
         </nav>
         
     <div class="regis">
-        <h5><b>Note: Click on the link for registration</b></h5>
+        <h5  style="padding: 10%;"><b>Note: Click on the link for registration</b></h5>
         <table>
             <tr>
                 <th>Day</th>
