--- a/AIWeekSchedule.html
+++ b/AIWeekSchedule.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WELCOME AI WEEK</title>
+    <title>AI Week</title>
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
