--- a/index.html
+++ b/index.html
@@ -22,6 +22,24 @@
 
     <div class="team_section">
         <div class="member">
+            <img src="NV_ALone.png" alt="Mr. N. V. Alone">
+            <div class="member_info">
+                <h1>Dr. N. V. Alone</h1>
+                <h2>Faculty Mentor</h2>
+                <p>Responsible for all the technical events organized by 10X Club GESCOE.</p>
+            </div>
+        </div>
+
+        <div class="member">
+            <img src="Neeta_Mam.jpg" alt="Dr.Neeta Deshpande">
+            <div class="member_info">
+                <h1>Dr. Neeta Deshpande</h1>
+                <h2>Faculty Mentor</h2>
+                <p>Responsible for all the technical events organized by 10X Club GESCOE.</p>
+            </div>
+        </div>
+        
+        <div class="member">
             <img src="Madhur_Bordered.png" alt="Madhur Chandratre">
             <div class="member_info">
                 <h1>Madhur Chandratre</h1>
