Text color button

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h3 id="sub_title">- By Coding Ninjas</h3>
         </div>
         <div class="buttons">
-            <div class="button"><a href="AIWeekSchedule.html"><strong>AI Week Schedule</strong></a></div>
+            <div class="button"><a href="AIWeekSchedule.html"><strong styles="text-color: white;">AI Week Schedule</strong></a></div>
         </div>
     </div>
 
